# academic-rss-site

./: .env.example  .gitattributes  .gitignore  README.md  feeds.yml  package.json  pyproject.toml  topics.yml
.github/workflows/: daily-rss-update.yml  guide-sync-check.yml
docs/: index.html  styles.css
docs/data/: papers.db
docs/fonts/noto-sans-sc/: FONT-METADATA.md  SHA256SUMS
docs/js/: app.js  controller.js  db.js  state.js
docs/superpowers/plans/: 2026-07-10-personal-academic-rss-site-mvp.md  2026-07-11-daily-rss-automation.md  2026-07-11-noto-sans-sc-typography.md  2026-07-11-rss-guide-taxonomy.md  (+2 more)
scripts/: render_site_guide.py  update.ps1  vendor_noto_sans_sc.py
src/paper_radar/: __main__.py  classify.py  cli.py  config.py  database.py  enrich.py  feeds.py  guide.py  http_client.py  identifiers.py  matching.py  models.py  normalize.py  pipeline.py  reclassify.py  schema.sql  validation.py
tests/: static_shell_behavior.test.cjs  test_classify.py  test_cli.py  test_config.py  test_daily_workflow.py  test_database_repository.py  test_database_schema.py  test_enrich.py  test_feeds.py  test_guide.py  test_guide_sync_workflow.py  test_http_client.py  test_normalize.py  test_pipeline.py  test_reclassify.py  test_release_files.py  test_static_shell.py  test_static_shell_behavior.py  test_validation.py  test_vendor_noto_sans_sc.py
tests/e2e/: conftest.py  test_browser_policy.py  test_site.py
tests/fixtures/: atom.xml  rss1.xml  rss2.xml
tests/web/: query.test.mjs  render-contract.test.mjs  sqljs-helper.mjs  state.test.mjs
(+5 files in other folders)
