[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-radar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0,<7",
  "httpx>=0.27,<1",
  "PyYAML>=6,<7",
  "python-dotenv>=1,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-playwright>=0.5,<1",
  "respx>=0.21,<1",
  "ruff>=0.6,<1",
]

[project.scripts]
paper-radar = "paper_radar.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
paper_radar = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
